--- a/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
+++ b/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
     "from pyspark.sql import SparkSession, DataFrame\n",
     "from pyspark.sql.types import StringType\n",
-    "from pyspark.sql.functions import udf, col, split, when"
+    "from pyspark.sql.functions import udf, col, split, when, to_date, max, min"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-06T12:55:38.322383489Z",
-     "start_time": "2024-05-06T12:55:37.589093356Z"
+     "end_time": "2024-05-06T14:23:37.892634591Z",
+     "start_time": "2024-05-06T14:23:37.823743646Z"
     }
    },
    "id": "9afea461edbb964d"
@@ -38,8 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24/05/06 14:55:43 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "24/05/06 14:55:43 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "24/05/06 15:57:27 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "24/05/06 15:57:27 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -54,22 +54,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24/05/06 14:55:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/05/06 15:57:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
     "# Create a SparkSession\n",
     "spark = SparkSession.builder \\\n",
-    "    .master(\"local\") \\\n",
+    "    .master(\"local[*]\") \\\n",
     "    .appName(\"Midares test job\") \\\n",
     "    .getOrCreate()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-06T12:55:52.603218327Z",
-     "start_time": "2024-05-06T12:55:37.902307340Z"
+     "end_time": "2024-05-06T13:57:35.171225607Z",
+     "start_time": "2024-05-06T13:57:22.208000964Z"
     }
    },
    "id": "1d9a28975edec8f6"
@@ -83,33 +83,403 @@
     "pjc_df_1 = spark.read.csv(pjc_path,header=True, inferSchema=True)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T13:57:46.572483394Z",
+     "start_time": "2024-05-06T13:57:39.065868365Z"
+    }
    },
    "id": "2038d360cf162ec2"
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id_midas: string (nullable = true)\n",
+      " |-- KROD3: string (nullable = true)\n",
+      " |-- KDDPJ: timestamp (nullable = true)\n",
+      " |-- KDFPJ: timestamp (nullable = true)\n",
+      " |-- KCPJC: integer (nullable = true)\n",
+      " |-- KCOPP: integer (nullable = true)\n",
+      " |-- KCFPP: integer (nullable = true)\n",
+      " |-- KCMNI: string (nullable = true)\n",
+      " |-- KCALF: double (nullable = true)\n",
+      " |-- KQRSPP: integer (nullable = true)\n",
+      " |-- KNOPRP: integer (nullable = true)\n",
+      " |-- KTDGAP: double (nullable = true)\n",
+      " |-- KQBPJP: integer (nullable = true)\n",
+      " |-- KQJSTP: integer (nullable = true)\n",
+      " |-- KCPJCC: string (nullable = true)\n",
+      " |-- alloc: string (nullable = true)\n"
+     ]
+    }
+   ],
    "source": [
     "pjc_df_1.printSchema()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T13:57:47.507734879Z",
+     "start_time": "2024-05-06T13:57:47.469937220Z"
+    }
    },
    "id": "44b58b52b49fe642"
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+-------------------+-------------------+-----+-----+-----+-----+-----+------+------+------+------+------+------+-----+\n",
+      "|id_midas|KROD3|              KDDPJ|              KDFPJ|KCPJC|KCOPP|KCFPP|KCMNI|KCALF|KQRSPP|KNOPRP|KTDGAP|KQBPJP|KQJSTP|KCPJCC|alloc|\n",
+      "+--------+-----+-------------------+-------------------+-----+-----+-----+-----+-----+------+------+------+------+------+------+-----+\n",
+      "|     M01|  S01|2017-07-01 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M01|  S02|2017-07-04 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M01|  S03|2017-07-05 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M01|  S04|2017-07-06 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M02|  S01|2017-08-05 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M02|  S02|2017-08-03 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M02|  S03|2017-08-02 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "|     M02|  S04|2017-08-01 00:00:00|2017-09-30 00:00:00|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|\n",
+      "+--------+-----+-------------------+-------------------+-----+-----+-----+-----+-----+------+------+------+------+------+------+-----+\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(pjc_df_1.show())"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T13:58:12.858816367Z",
+     "start_time": "2024-05-06T13:58:11.922073587Z"
+    }
    },
    "id": "64db01e662e67488"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "pjc_df_1 = pjc_df_1.withColumn(\"KDDPJ_date\",to_date(col(\"KDDPJ\"))).withColumn(\"KDFPJ_date\",to_date(col(\"KDFPJ\"))).drop(\"KDDPJ\",\"KDFPJ\").withColumnRenamed(\"KDDPJ_date\",\"KDDPJ\").withColumnRenamed(\"KDFPJ_date\",\"KDFPJ\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T14:02:49.322110744Z",
+     "start_time": "2024-05-06T14:02:49.085800734Z"
+    }
+   },
+   "id": "621a74fabb6e7293"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id_midas: string (nullable = true)\n",
+      " |-- KROD3: string (nullable = true)\n",
+      " |-- KCPJC: integer (nullable = true)\n",
+      " |-- KCOPP: integer (nullable = true)\n",
+      " |-- KCFPP: integer (nullable = true)\n",
+      " |-- KCMNI: string (nullable = true)\n",
+      " |-- KCALF: double (nullable = true)\n",
+      " |-- KQRSPP: integer (nullable = true)\n",
+      " |-- KNOPRP: integer (nullable = true)\n",
+      " |-- KTDGAP: double (nullable = true)\n",
+      " |-- KQBPJP: integer (nullable = true)\n",
+      " |-- KQJSTP: integer (nullable = true)\n",
+      " |-- KCPJCC: string (nullable = true)\n",
+      " |-- alloc: string (nullable = true)\n",
+      " |-- KDDPJ: date (nullable = true)\n",
+      " |-- KDFPJ: date (nullable = true)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pjc_df_1.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T14:02:57.210388208Z",
+     "start_time": "2024-05-06T14:02:57.165291793Z"
+    }
+   },
+   "id": "a30df66c3ea88d2d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+-----+-----+-----+-----+-----+------+------+------+------+------+------+-----+----------+----------+\n",
+      "|id_midas|KROD3|KCPJC|KCOPP|KCFPP|KCMNI|KCALF|KQRSPP|KNOPRP|KTDGAP|KQBPJP|KQJSTP|KCPJCC|alloc|     KDDPJ|     KDFPJ|\n",
+      "+--------+-----+-----+-----+-----+-----+-----+------+------+------+------+------+------+-----+----------+----------+\n",
+      "|     M01|  S01|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-07-01|2017-09-30|\n",
+      "|     M01|  S02|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-07-04|2017-09-30|\n",
+      "|     M01|  S03|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-07-05|2017-09-30|\n",
+      "|     M01|  S04|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-07-06|2017-09-30|\n",
+      "|     M02|  S01|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-08-05|2017-09-30|\n",
+      "|     M02|  S02|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-08-03|2017-09-30|\n",
+      "|     M02|  S03|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-08-02|2017-09-30|\n",
+      "|     M02|  S04|   66|   66|   66|   BK| 26.4|     0|     0|  21.6|     0|    99|    AC| null|2017-08-01|2017-09-30|\n",
+      "+--------+-----+-----+-----+-----+-----+-----+------+------+------+------+------+------+-----+----------+----------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "pjc_df_1.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T14:03:23.759653256Z",
+     "start_time": "2024-05-06T14:03:23.290694003Z"
+    }
+   },
+   "id": "4b99795d9021ac1a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "dateformat_str = \"%Y-%m-%d\"\n",
+    "\n",
+    "seuil_debut = datetime.strptime(\"2017-01-01\", dateformat_str)\n",
+    "seuil_fin = datetime.strptime(\"2023-08-31\", dateformat_str)\n",
+    "seuil_raz = datetime.strptime(\"2021-07-01\", dateformat_str)\n",
+    "seuil_fin_censure_17 = datetime.strptime(\"2018-08-31\", dateformat_str)\n",
+    "seuil_fin_censure_18 = datetime.strptime(\"2019-08-31\", dateformat_str)\n",
+    "seuil_fin_censure_19 = datetime.strptime(\"2020-08-31\", dateformat_str)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T14:04:43.594902604Z",
+     "start_time": "2024-05-06T14:04:43.549788123Z"
+    }
+   },
+   "id": "66309a2c5af780e9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "temp = pjc_df_1.select(\"id_midas\", \"KROD3\", \"KCPJC\", \"KQBPJP\", \"KDDPJ\", \"KDFPJ\", \"KCFPP\", \"alloc\") \\\n",
+    "    .filter(col(\"KDDPJ\") <= seuil_fin) \\\n",
+    "    .groupBy(\"id_midas\", \"KROD3\").agg(max(\"KDFPJ\").alias(\"date_der_PJC\"), min(\"KDDPJ\").alias(\"date_ouv_droit\")).orderBy(\"id_midas\",\"KROD3\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T15:33:14.353344595Z",
+     "start_time": "2024-05-06T15:33:14.202931062Z"
+    }
+   },
+   "id": "7b0fd03da2e77b41"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+------------+--------------+\n",
+      "|id_midas|KROD3|date_der_PJC|date_ouv_droit|\n",
+      "+--------+-----+------------+--------------+\n",
+      "|     M01|  S01|  2017-09-30|    2017-07-01|\n",
+      "|     M01|  S02|  2017-09-30|    2017-07-04|\n",
+      "|     M01|  S03|  2017-09-30|    2017-07-05|\n",
+      "|     M01|  S04|  2017-09-30|    2017-07-06|\n",
+      "|     M02|  S01|  2017-09-30|    2017-08-05|\n",
+      "|     M02|  S02|  2017-09-30|    2017-08-03|\n",
+      "|     M02|  S03|  2017-09-30|    2017-08-02|\n",
+      "|     M02|  S04|  2017-09-30|    2017-08-01|\n",
+      "+--------+-----+------------+--------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T15:33:16.214701987Z",
+     "start_time": "2024-05-06T15:33:15.114816328Z"
+    }
+   },
+   "id": "c9f123e2ea006d08"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "\n",
+    "def generate_month_day_dict(months, start_day, end_day):\n",
+    "    month_ranges = {}\n",
+    "    for month in months:\n",
+    "        month_start = month + start_day\n",
+    "        month_end = month + end_day\n",
+    "        month_ranges[month] = (month_start, month_end)\n",
+    "    return month_ranges\n",
+    "\n",
+    "def generate_month_days(start_day, end_day):\n",
+    "    # Convert start_day and end_day to datetime objects\n",
+    "    start_date = datetime.strptime(start_day, '%m%d')\n",
+    "    end_date = datetime.strptime(end_day, '%m%d')\n",
+    "    \n",
+    "    # Initialize an empty list to store the days\n",
+    "    days_list = []\n",
+    "    \n",
+    "    # Generate the days and add them to the list\n",
+    "    current_date = start_date\n",
+    "    while current_date <= end_date:\n",
+    "        days_list.append(current_date.strftime('%m%d'))\n",
+    "        current_date += timedelta(days=1)\n",
+    "    \n",
+    "    return days_list\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T15:19:53.804629108Z",
+     "start_time": "2024-05-07T15:19:53.749359209Z"
+    }
+   },
+   "id": "77f0c7e044fe7f74"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "months = ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T14:54:54.152860185Z",
+     "start_time": "2024-05-07T14:54:54.077170927Z"
+    }
+   },
+   "id": "c93b877a0d46dfa"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "start_day = '17'\n",
+    "end_day = '22'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T15:19:21.088872341Z",
+     "start_time": "2024-05-07T15:19:21.042766907Z"
+    }
+   },
+   "id": "39bb349a7423e050"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "month_day_dict = generate_month_day_dict(months, start_day, end_day)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T15:19:57.089777008Z",
+     "start_time": "2024-05-07T15:19:57.077669720Z"
+    }
+   },
+   "id": "fc66d696cca30d5b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'01': ('0117', '0122'), '02': ('0217', '0222'), '03': ('0317', '0322'), '04': ('0417', '0422'), '05': ('0517', '0522'), '06': ('0617', '0622'), '07': ('0717', '0722'), '08': ('0817', '0822'), '09': ('0917', '0922'), '10': ('1017', '1022'), '11': ('1117', '1122'), '12': ('1217', '1222')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(month_day_dict)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T15:20:05.233821718Z",
+     "start_time": "2024-05-07T15:20:05.199374470Z"
+    }
+   },
+   "id": "c6b50acbc3758faf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0117', '0118', '0119', '0120', '0121', '0122', '0217', '0218', '0219', '0220', '0221', '0222', '0317', '0318', '0319', '0320', '0321', '0322', '0417', '0418', '0419', '0420', '0421', '0422', '0517', '0518', '0519', '0520', '0521', '0522', '0617', '0618', '0619', '0620', '0621', '0622', '0717', '0718', '0719', '0720', '0721', '0722', '0817', '0818', '0819', '0820', '0821', '0822', '0917', '0918', '0919', '0920', '0921', '0922', '1017', '1018', '1019', '1020', '1021', '1022', '1117', '1118', '1119', '1120', '1121', '1122', '1217', '1218', '1219', '1220', '1221', '1222']\n"
+     ]
+    }
+   ],
+   "source": [
+    "year_days = []\n",
+    "    \n",
+    "# Generate days for each month and add them to the year_days list\n",
+    "for month, (start_day, end_day) in month_day_dict.items():\n",
+    "    year_days.extend(generate_month_days(start_day, end_day))\n",
+    "        \n",
+    "    \n",
+    "print(year_days)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T15:31:27.276651120Z",
+     "start_time": "2024-05-07T15:31:27.209050656Z"
+    }
+   },
+   "id": "f26f929b7882e536"
   },
   {
    "cell_type": "code",
@@ -119,7 +489,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "621a74fabb6e7293"
+   "id": "bcd9e785632f1280"
   }
  ],
  "metadata": {
