--- a/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
+++ b/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
@@ -337,33 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
     "\n",
-    "def generate_month_day_dict(months, start_day, end_day):\n",
-    "    month_ranges = {}\n",
-    "    for month in months:\n",
-    "        month_start = month + start_day\n",
-    "        month_end = month + end_day\n",
-    "        month_ranges[month] = (month_start, month_end)\n",
-    "    return month_ranges\n",
     "\n",
-    "def generate_month_days(start_day, end_day):\n",
-    "    # Convert start_day and end_day to datetime objects\n",
-    "    start_date = datetime.strptime(start_day, '%m%d')\n",
-    "    end_date = datetime.strptime(end_day, '%m%d')\n",
-    "    \n",
+    "def generate_month_day_list(months, start_day, end_day):\n",
     "    # Initialize an empty list to store the days\n",
     "    days_list = []\n",
     "    \n",
-    "    # Generate the days and add them to the list\n",
-    "    current_date = start_date\n",
-    "    while current_date <= end_date:\n",
-    "        days_list.append(current_date.strftime('%m%d'))\n",
-    "        current_date += timedelta(days=1)\n",
+    "    for month in months:\n",
+    "        month_start = month + start_day\n",
+    "        month_end = month + end_day\n",
+    "        # Convert start_day and end_day to datetime objects\n",
+    "        start_date = datetime.strptime(month_start, '%m%d')\n",
+    "        end_date = datetime.strptime(month_end, '%m%d')\n",
+    "            \n",
+    "        # Generate the days and add them to the list\n",
+    "        current_date = start_date\n",
+    "        while current_date <= end_date:\n",
+    "            days_list.append(current_date.strftime('%m%d'))\n",
+    "            current_date += timedelta(days=1)\n",
     "    \n",
     "    return days_list\n",
     "\n"
@@ -371,15 +367,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T15:19:53.804629108Z",
-     "start_time": "2024-05-07T15:19:53.749359209Z"
+     "end_time": "2024-05-07T15:53:35.995231486Z",
+     "start_time": "2024-05-07T15:53:35.931108099Z"
     }
    },
    "id": "77f0c7e044fe7f74"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "months = ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12']"
@@ -387,15 +383,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T14:54:54.152860185Z",
-     "start_time": "2024-05-07T14:54:54.077170927Z"
+     "end_time": "2024-05-07T15:53:36.865099733Z",
+     "start_time": "2024-05-07T15:53:36.849528039Z"
     }
    },
    "id": "c93b877a0d46dfa"
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "start_day = '17'\n",
@@ -404,55 +400,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T15:19:21.088872341Z",
-     "start_time": "2024-05-07T15:19:21.042766907Z"
+     "end_time": "2024-05-07T15:53:37.414584447Z",
+     "start_time": "2024-05-07T15:53:37.389591797Z"
     }
    },
    "id": "39bb349a7423e050"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "outputs": [],
    "source": [
-    "month_day_dict = generate_month_day_dict(months, start_day, end_day)"
+    "month_day_dict = generate_month_day_list(months, start_day, end_day)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T15:19:57.089777008Z",
-     "start_time": "2024-05-07T15:19:57.077669720Z"
+     "end_time": "2024-05-07T15:53:39.776442196Z",
+     "start_time": "2024-05-07T15:53:39.765680631Z"
     }
    },
    "id": "fc66d696cca30d5b"
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'01': ('0117', '0122'), '02': ('0217', '0222'), '03': ('0317', '0322'), '04': ('0417', '0422'), '05': ('0517', '0522'), '06': ('0617', '0622'), '07': ('0717', '0722'), '08': ('0817', '0822'), '09': ('0917', '0922'), '10': ('1017', '1022'), '11': ('1117', '1122'), '12': ('1217', '1222')}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(month_day_dict)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-07T15:20:05.233821718Z",
-     "start_time": "2024-05-07T15:20:05.199374470Z"
-    }
-   },
-   "id": "c6b50acbc3758faf"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -463,23 +435,16 @@
     }
    ],
    "source": [
-    "year_days = []\n",
-    "    \n",
-    "# Generate days for each month and add them to the year_days list\n",
-    "for month, (start_day, end_day) in month_day_dict.items():\n",
-    "    year_days.extend(generate_month_days(start_day, end_day))\n",
-    "        \n",
-    "    \n",
-    "print(year_days)"
+    "print(month_day_dict)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T15:31:27.276651120Z",
-     "start_time": "2024-05-07T15:31:27.209050656Z"
+     "end_time": "2024-05-07T15:53:40.404011283Z",
+     "start_time": "2024-05-07T15:53:40.383479559Z"
     }
    },
-   "id": "f26f929b7882e536"
+   "id": "c6b50acbc3758faf"
   },
   {
    "cell_type": "code",
