--- a/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
+++ b/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
@@ -261,10 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "dateformat_str = \"%Y-%m-%d\"\n",
+    "feature_cols = [\"id_midas\", \"KROD3\"]\n",
     "\n",
     "seuil_debut = datetime.strptime(\"2017-01-01\", dateformat_str)\n",
     "seuil_fin = datetime.strptime(\"2023-08-31\", dateformat_str)\n",
@@ -276,33 +277,45 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-06T14:04:43.594902604Z",
-     "start_time": "2024-05-06T14:04:43.549788123Z"
+     "end_time": "2024-05-10T08:32:32.522771593Z",
+     "start_time": "2024-05-10T08:32:32.499295173Z"
     }
    },
    "id": "66309a2c5af780e9"
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "outputs": [],
    "source": [
-    "temp = pjc_df_1.select(\"id_midas\", \"KROD3\", \"KCPJC\", \"KQBPJP\", \"KDDPJ\", \"KDFPJ\", \"KCFPP\", \"alloc\") \\\n",
+    "pjc_df_2 = pjc_df_1.select(\"id_midas\", \"KROD3\", \"KCPJC\", \"KQBPJP\", \"KDDPJ\", \"KDFPJ\", \"KCFPP\", \"alloc\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c12dbb64e254782d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [],
+   "source": [
+    "temp = pjc_df_2 \\\n",
     "    .filter(col(\"KDDPJ\") <= seuil_fin) \\\n",
-    "    .groupBy(\"id_midas\", \"KROD3\").agg(max(\"KDFPJ\").alias(\"date_der_PJC\"), min(\"KDDPJ\").alias(\"date_ouv_droit\")).orderBy(\"id_midas\",\"KROD3\")"
+    "    .groupBy(feature_cols).agg(max(\"KDFPJ\").alias(\"date_der_PJC\"), min(\"KDDPJ\").alias(\"date_ouv_droit\")).orderBy(\"id_midas\",\"KROD3\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-06T15:33:14.353344595Z",
-     "start_time": "2024-05-06T15:33:14.202931062Z"
+     "end_time": "2024-05-10T08:32:36.638822520Z",
+     "start_time": "2024-05-10T08:32:36.510387560Z"
     }
    },
    "id": "7b0fd03da2e77b41"
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
@@ -329,23 +342,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-06T15:33:16.214701987Z",
-     "start_time": "2024-05-06T15:33:15.114816328Z"
+     "end_time": "2024-05-10T08:32:39.970293150Z",
+     "start_time": "2024-05-10T08:32:38.817506520Z"
     }
    },
    "id": "c9f123e2ea006d08"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "outputs": [],
-   "source": [],
+   "source": [
+    "resu = pjc_df_2.join(temp, feature_cols, type=\"inner\")\n",
+    "resu.show(5)"
+   ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-07T15:53:35.995231486Z",
-     "start_time": "2024-05-07T15:53:35.931108099Z"
-    }
+    "collapsed": false
    },
    "id": "77f0c7e044fe7f74"
   },
