--- a/notebooks/pyspark/advance/S02_Sedona/02.Read_write_various_geo_data_format.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/02.Read_write_various_geo_data_format.ipynb
@@ -512,7 +512,9 @@
    "source": [
     "## 1.4 Read wkt and wkb file\n",
     "\n",
-    "Geometries in a `WKT and WKB` file always occupy a single column no matter how many coordinates they have. Sedona provides `WktReader and WkbReader` to create generic SpatialRDD.\n"
+    "Geometries in a `WKT and WKB` file always occupy a single column no matter how many coordinates they have. Sedona provides `WktReader and WkbReader` to create generic SpatialRDD. Then we need to convert the spatial rdd to dataframe.\n",
+    "\n",
+    "> You must use the wkt reader to read wkt file, and wkb reader to read wkb file."
    ]
   },
   {
@@ -546,8 +548,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T10:26:12.360692Z",
-     "start_time": "2024-11-12T10:26:12.312551Z"
+     "end_time": "2024-11-12T11:09:01.922714Z",
+     "start_time": "2024-11-12T11:09:01.777351Z"
     }
    },
    "cell_type": "code",
@@ -557,42 +559,58 @@
     "allowTopologyInvalidGeometries = True\n",
     "skipSyntaxInvalidGeometries = False\n",
     "\n",
-    "spatialRdd = WktReader.readToGeometryRDD(sedona.sparkContext, polygon_wkb_file_path, wktColumn, allowTopologyInvalidGeometries, skipSyntaxInvalidGeometries)\n",
+    "spatialRdd = WkbReader.readToGeometryRDD(sedona.sparkContext, polygon_wkb_file_path, wktColumn, allowTopologyInvalidGeometries, skipSyntaxInvalidGeometries)\n",
     "\n",
     "#WkbReader.readToGeometryRDD(sc, wkb_geometries_location, 0, True, False)"
    ],
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 66
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T10:36:49.694767Z",
-     "start_time": "2024-11-12T10:36:49.553435Z"
+     "end_time": "2024-11-12T11:10:06.854575Z",
+     "start_time": "2024-11-12T11:10:06.831882Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from sedona.utils.adapter import Adapter\n",
     "county_small_df = Adapter.toDf(spatialRdd,sedona)\n",
-    "county_small_df.createOrReplaceTempView(\"county_small_table\")\n",
-    "result = sedona.sql(\"select * from county_small_table\")\n",
-    "result.show(5)"
+    "county_small_df.createOrReplaceTempView(\"county_small_table\")\n"
    ],
+   "outputs": [],
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T11:10:02.846719Z",
+     "start_time": "2024-11-12T11:10:02.755284Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "county_small_df.show(5)",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+\n",
-      "|geometry|\n",
-      "+--------+\n",
-      "+--------+\n",
+      "+--------------------+\n",
+      "|            geometry|\n",
+      "+--------------------+\n",
+      "|POLYGON ((-97.019...|\n",
+      "|POLYGON ((-123.43...|\n",
+      "|POLYGON ((-104.56...|\n",
+      "|POLYGON ((-96.910...|\n",
+      "|POLYGON ((-98.273...|\n",
+      "+--------------------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 68
   },
   {
    "cell_type": "markdown",
@@ -762,6 +780,72 @@
     }
    ],
    "execution_count": 59
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 3.1 Read geo json by using the sedona GeoJsonReader\n",
+    "  \n",
+    "Sedona also provides a predefined function `GeoJsonReader`. Below is an code example"
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T11:16:18.772078Z",
+     "start_time": "2024-11-12T11:16:18.756422Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "from sedona.core.formatMapper import GeoJsonReader",
+   "outputs": [],
+   "execution_count": 71
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T11:16:16.313219Z",
+     "start_time": "2024-11-12T11:16:16.185281Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "geojson_sp_rdd = GeoJsonReader.readToGeometryRDD(sedona.sparkContext, poly_json_file_path)\n",
+    "geojson_df = Adapter.toDf(geojson_sp_rdd,sedona)"
+   ],
+   "outputs": [],
+   "execution_count": 70
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T11:16:36.896989Z",
+     "start_time": "2024-11-12T11:16:36.743595Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "geojson_df.show(5)",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-------+--------+-------+--------+--------------------+------------+----+----+--------+------+\n",
+      "|            geometry|STATEFP|COUNTYFP|TRACTCE|BLKGRPCE|            AFFGEOID|       GEOID|NAME|LSAD|   ALAND|AWATER|\n",
+      "+--------------------+-------+--------+-------+--------+--------------------+------------+----+----+--------+------+\n",
+      "|POLYGON ((-87.621...|     01|     077| 011501|       5|1500000US01077011...|010770115015|   5|  BG| 6844991| 32636|\n",
+      "|POLYGON ((-85.719...|     01|     045| 021102|       4|1500000US01045021...|010450211024|   4|  BG|11360854|     0|\n",
+      "|POLYGON ((-86.000...|     01|     055| 001300|       3|1500000US01055001...|010550013003|   3|  BG| 1378742|247387|\n",
+      "|POLYGON ((-86.574...|     01|     089| 001700|       2|1500000US01089001...|010890017002|   2|  BG| 1040641|     0|\n",
+      "|POLYGON ((-85.382...|     01|     069| 041400|       1|1500000US01069041...|010690414001|   1|  BG| 8243574|     0|\n",
+      "+--------------------+-------+--------+-------+--------+--------------------+------------+----+----+--------+------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 72
   },
   {
    "metadata": {},
