--- a/notebooks/pyspark/advance/S02_Sedona/02.Read_write_various_geo_data_format.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/02.Read_write_various_geo_data_format.ipynb
@@ -915,10 +915,177 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 5. Read geo parquet"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T12:34:41.458512Z",
+     "start_time": "2024-11-12T12:34:40.489811Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "source": [
+    "# this code works with sedona > v1.3.0\n",
+    "geo_parquet_path = f\"{data_folder_path}/county_geo_parquet\"\n",
+    "df = sedona.read.format(\"geoparquet\").load(geo_parquet_path)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- county_shape: geometry (nullable = true)\n",
+      " |-- county_name: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 73
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T12:34:56.826885Z",
+     "start_time": "2024-11-12T12:34:56.121922Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df.show(5)\n",
+    "df.printSchema()"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------------+\n",
+      "|        county_shape|     county_name|\n",
+      "+--------------------+----------------+\n",
+      "|POLYGON ((-97.019...|   Cuming County|\n",
+      "|POLYGON ((-123.43...|Wahkiakum County|\n",
+      "|POLYGON ((-104.56...|  De Baca County|\n",
+      "|POLYGON ((-96.910...|Lancaster County|\n",
+      "|POLYGON ((-98.273...| Nuckolls County|\n",
+      "+--------------------+----------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "root\n",
+      " |-- county_shape: geometry (nullable = true)\n",
+      " |-- county_name: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 74
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 5.1 Read the metadata of geo parquet"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T12:41:10.964781Z",
+     "start_time": "2024-11-12T12:41:10.897822Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "metadata_df = sedona.read.format(\"geoparquet.metadata\").load(geo_parquet_path)\n",
+    "metadata_df.printSchema()"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- path: string (nullable = true)\n",
+      " |-- version: string (nullable = true)\n",
+      " |-- primary_column: string (nullable = true)\n",
+      " |-- columns: map (nullable = true)\n",
+      " |    |-- key: string\n",
+      " |    |-- value: struct (valueContainsNull = true)\n",
+      " |    |    |-- encoding: string (nullable = true)\n",
+      " |    |    |-- geometry_types: array (nullable = true)\n",
+      " |    |    |    |-- element: string (containsNull = true)\n",
+      " |    |    |-- bbox: array (nullable = true)\n",
+      " |    |    |    |-- element: double (containsNull = true)\n",
+      " |    |    |-- crs: string (nullable = true)\n",
+      " |    |    |-- covering: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 75
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-12T12:42:00.671345Z",
+     "start_time": "2024-11-12T12:42:00.565999Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "metadata_df.show(5,truncate=False)",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------------------------------------------------------------------------------------------------------------------------------+-------+--------------+-------------------------------------------------------------------------------------------------------------+\n",
+      "|path                                                                                                                                           |version|primary_column|columns                                                                                                      |\n",
+      "+-----------------------------------------------------------------------------------------------------------------------------------------------+-------+--------------+-------------------------------------------------------------------------------------------------------------+\n",
+      "|file:/C:/Users/PLIU/Documents/git/PySparkCommonFunc/data/county_geo_parquet/part-00000-b91d62a0-e28d-429d-aa47-196b194460c1-c000.snappy.parquet|1.1.0  |county_shape  |{county_shape -> {WKB, [MultiPolygon, Polygon], [-132.268057, 18.117735, -64.768336, 56.407375], null, NULL}}|\n",
+      "+-----------------------------------------------------------------------------------------------------------------------------------------------+-------+--------------+-------------------------------------------------------------------------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 77
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "> If the input Parquet file does not have **GeoParquet metadata**, the values of `version, primary_column and columns` fields of the resulting dataframe will be `null`."
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 6. Load data from JDBC data sources"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 7. Load data from geopackage\n",
+    "\n",
+    "Since **v1.7.0**, Sedona supports loading Geopackage file format as a DataFrame.\n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 8. Transform the Coordinate Reference System\n",
+    "\n",
+    "Sedona doesn't control the coordinate unit (degree-based or meter-based) of all geometries in a Geometry column. The unit of all related distances in SedonaSQL is same as the unit of all geometries in a Geometry column.\n",
+    "\n",
+    "By default, this function uses **lon/lat** order since `v1.5.0`. Before `v1.5.0`, it used `lat/lon` order. You can use **ST_FlipCoordinates** function to swap X and Y.\n",
+    "\n",
+    "For more details, please read the **ST_Transform** section in Sedona API References.\n",
+    "\n",
+    "To convert Coordinate Reference System of the Geometry column created before, use the following code:\n",
+    "\n",
+    "```sql\n",
+    "SELECT ST_Transform(countyshape, \"epsg:4326\", \"epsg:3857\") AS newcountyshape, _c1, _c2, _c3, _c4, _c5, _c6, _c7 FROM spatialdf;\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
